2015-08-29  François  <francois@dechelle.net>

	* tested new implementation of ipc; unit tests works; handler calling not yet implemented

2015-08-27  François  <francois@dechelle.net>

	* tested implementation of new configuration and new modules API; works with clamav

2015-08-25  François  <francois@dechelle.net>

	* completed implementation of new configuration; not tested yet

	* pushed the configuration parser code to its own file

	* changed signature of set/get configuration functions; now argv is NULL terminated, remove argc argument

2015-08-24  François  <francois@dechelle.net>

	* implementing new config system: changed internal modules and clamav module to use configuration table; in progress

	* changed configuration file parser to use its own scanner; using glib scanner was painfull because of distinction integer/strings; now all integers are returned as strings; tests ok

2015-08-21  François  <francois@dechelle.net>

	* added new configuration file parser using Glib scanner; tests ok

	* finished implementation of structure for modules

2015-08-20  François  <francois@dechelle.net>

	* implementation of structure for modules almost complete; compiles ok

	* structure for modules in progress

	* moved builtin modules to separate directory

2015-08-19  François  <francois@dechelle.net>

	* removing some exported print functions

2015-08-06  François  <francois@dechelle.net>

	* fixing calls to fprintf to signal error or print debug messages; now using g_log() with appropriate level

2015-07-23  François  <francois@dechelle.net>

	* fixed missing check of module status in scan loop; this made scan crash if module's init function failed and module's status was then UHURU_MOD_INIT_ERROR

2015-05-29  François  <francois@dechelle.net>

	* fixed bug/crash in scan daemon

2015-05-12  François  <francois@dechelle.net>

	* added watch daemon using dbus

2015-04-17  François  <francois@dechelle.net>
