@@ -17,7 +17,13 @@ struct ipc_value {
   } value;
 };
 
-typedef guchar ipc_tag_t;
+typedef guchar ipc_msg_id_t;
+
+#define IPC_MSG_ID_FIRST             ((ipc_msg_id_t)0)
+#define IPC_MSG_ID_SCAN              ((ipc_msg_id_t)0)
+#define IPC_MSG_ID_SCAN_FILE         ((ipc_msg_id_t)1)
+#define IPC_MSG_ID_SCAN_END          ((ipc_msg_id_t)2)
+#define IPC_MSG_ID_LAST              ((ipc_msg_id_t)2)
 
 struct ipc_manager;
 
@@ -25,16 +31,18 @@ struct ipc_manager *ipc_manager_new(int input_fd, int output_fd);
 
 void ipc_manager_free(struct ipc_manager *manager);
 
+ipc_msg_id_t ipc_manager_get_msg_id(struct ipc_manager *manager);
+
 int ipc_manager_get_argc(struct ipc_manager *manager);
 
 struct ipc_value *ipc_manager_get_argv(struct ipc_manager *manager);
 
 typedef void (*ipc_handler_t)(struct ipc_manager *manager, void *data);
 
-int ipc_manager_add_callback(struct ipc_manager *manager, ipc_tag_t tag, ipc_handler_t cb, void *data);
+int ipc_manager_add_handler(struct ipc_manager *manager, ipc_msg_id_t msg_id, ipc_handler_t handler, void *data);
 
 int ipc_manager_receive(struct ipc_manager *manager);
 
-int ipc_manager_send_msg(struct ipc_manager *manager, ipc_tag_t tag, ...);
+int ipc_manager_send_msg(struct ipc_manager *manager, ipc_msg_id_t msg_id, ...);
 
 #endif
