@@ -1,6 +1,10 @@
+2015-08-31  François  <francois@dechelle.net>
+
+	* finished new implementation of ipc with handlers; unit tests work
+
 2015-08-29  François  <francois@dechelle.net>
 
-	* tested new implementation of ipc; unit tests works; handler calling not yet implemented
+	* tested new implementation of ipc; unit tests work; handler calling not yet implemented
 
 2015-08-27  François  <francois@dechelle.net>
 
